# ShitEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md
.github/workflows/: build.yml  docs.yml  release.yml
Engine/: .gitignore  CMakeLists.txt  Doxyfile.in  package-lock.json
Engine/.github/workflows/: docs.yml  release.yml
Engine/cmake/: Docs.cmake
Engine/include/: ShitEngine.h
Engine/include/ShitEngine/: Math.h
Engine/include/ShitEngine/Audio/: AudioTrack.h
Engine/include/ShitEngine/Component/: AnimationComponent.h  Behavior.h  CameraComponent.h  Component.h  RendererComponent.h  SpriteRenderer.h  TransformComponent.h
Engine/include/ShitEngine/Core/: Config.h  Core.h  Game.h  Log.h  Time.h  Window.h  pch.h
Engine/include/ShitEngine/Event/: Event.h
Engine/include/ShitEngine/GameObject/: GameObject.h
Engine/include/ShitEngine/Input/: Input.h  KeyCode.h
Engine/include/ShitEngine/Render/: RenderSystem.h  Renderer.h  Sprite.h  SpriteSheet.h
Engine/include/ShitEngine/Resource/: AudioManager.h  TextureManager.h
Engine/include/ShitEngine/Scene/: SceneManager.h
Engine/include/ShitEngine/System/: System.h
Engine/include/ShitEngine/UI/: UIButton.h  UICanvas.h  UIImage.h  UIText.h  UITextBox.h  UITransform.h
Engine/src/ShitEngine/Audio/: AudioPlayer.cpp  AudioTrack.cpp
Engine/src/ShitEngine/Component/: AnimationComponent.cpp  Behavior.cpp  RendererComponent.cpp  TransformComponent.cpp
Engine/src/ShitEngine/Core/: Config.cpp  Game.cpp  Log.cpp  Time.cpp
Engine/src/ShitEngine/Event/: EventBus.cpp
Engine/src/ShitEngine/Input/: Input.cpp
Engine/src/ShitEngine/Render/: Animation.cpp  Renderer.cpp  Sprite.cpp
Engine/src/ShitEngine/Resource/: AudioManager.cpp  FontManager.cpp
Engine/src/ShitEngine/System/: BehaviorSystem.cpp  System.cpp
Engine/src/ShitEngine/UI/: UIButton.cpp  UIImage.cpp  UIRenderSystem.cpp  UIText.cpp  UITextBox.cpp  UITransform.cpp
Examples/: CMakeLists.txt  settings.json
Examples/src/: InputMappingTestScene.cpp  InputMappingTestScene.h  Player.cpp  Player.h  UITestScene.cpp  UITestScene.h  main.cpp
cmake/: DependencyManager.cmake  Docs.cmake  ShitEngineConfig.cmake.in
docs/: header.html  mainpage.md
include/: ShitEngine.h
include/ShitEngine/: Config.h  Game.h  Log.h  Math.h
include/ShitEngine/Audio/: AudioPlayer.h  AudioTrack.h
include/ShitEngine/Component/: AnimationComponent.h  Behavior.h  CameraComponent.h  Component.h  RendererComponent.h  SpriteRenderer.h  TransformComponent.h
include/ShitEngine/Core/: Config.h  Core.h  Game.h  Input.h  Log.h  TextInputGate.h  Time.h  Window.h  pch.h
include/ShitEngine/Event/: EventBus.h
include/ShitEngine/GameObject/: GameObject.h  Prefab.h
include/ShitEngine/Input/: Input.h  KeyCode.h
include/ShitEngine/Render/: Animation.h  RenderSystem.h  Renderer.h  Sprite.h  SpriteSheet.h
include/ShitEngine/Resource/: AudioManager.h  FontManager.h  ResourceManager.h  TextureManager.h
include/ShitEngine/Scene/: Scene.h  SceneManager.h
include/ShitEngine/System/: BehaviorSystem.h  System.h
include/ShitEngine/UI/: UIButton.h  UICanvas.h  UIImage.h  UIRenderSystem.h  UIRendererComponent.h  UIText.h  UITextArea.h  UITextBox.h  UITextInput.h  UITransform.h
src/: main.cpp
src/ShitEngine/: Game.cpp  Log.cpp
src/ShitEngine/Audio/: AudioPlayer.cpp  AudioTrack.cpp
src/ShitEngine/Component/: AnimationComponent.cpp  Behavior.cpp  CameraComponent.cpp  Component.cpp  RendererComponent.cpp  SpriteRenderer.cpp  TransformComponent.cpp
src/ShitEngine/Core/: Config.cpp  Game.cpp  Input.cpp  Log.cpp  TextInputGate.cpp  Time.cpp  Window.cpp
src/ShitEngine/Event/: EventBus.cpp
src/ShitEngine/GameObject/: GameObject.cpp
src/ShitEngine/Input/: Input.cpp
src/ShitEngine/Render/: Animation.cpp  RenderSystem.cpp  Renderer.cpp  Sprite.cpp  SpriteSheet.cpp
src/ShitEngine/Resource/: AudioManager.cpp  FontManager.cpp  ResourceManager.cpp  TextureManager.cpp
src/ShitEngine/Scene/: Scene.cpp  SceneManager.cpp
src/ShitEngine/System/: BehaviorSystem.cpp  System.cpp
src/ShitEngine/UI/: UIButton.cpp  UICanvas.cpp  UIImage.cpp  UIRenderSystem.cpp  UIRendererComponent.cpp  UIText.cpp  UITextArea.cpp  UITextBox.cpp  UITextInput.cpp  UITransform.cpp
